fix: bindings